Details
-
Bug
-
Status: Closed
-
Critical
-
Resolution: Fixed
-
0.27
-
None
-
Windows
Description
The AMQP 1.0 protocol transport driver has a different interaction between threads on connection close. This exposes bugs in the existing SslAsynchIO driver that leads to spurious error messages about failed negotiation setup, even though the setup succeeded long ago.
The associated "reason" for the failure varies, because the contents of the error code is unrelated to any SSL processing error.