QPID-5669: spurious error on connection close (Windows C++): SSL negotiation failed

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1587222 13f79535-47bb-0310-9956-ffa450edef68